--- a/AnonCV.html
+++ b/AnonCV.html
@@ -49,7 +49,7 @@
     </tbody>
   </table>
 <hr>
-  <h3>Skills</h3>
+  <h3>Skills (out of ⭐⭐⭐⭐⭐)</h3>
   <table cellspacing="10" cellpadding>
     <tr>
       <td>
